sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:15: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( échangé = false) {
                             ^AlgCocktailSort3:25: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( échangé = false ) {
                             ^